Answer 422 if webhook is not configured
